--- a/config/config.yml
+++ b/config/config.yml
@@ -7,10 +7,10 @@ conv_block:
 - VGG
 - VGG
 - VGG
-dataset_path: dataset
+dataset_path: augment_dataset
 epoch: 1
-in_channel_dim: 4
-learning_rate: 0.1
+in_channel_dim: 3
+learning_rate: 0.01
 n_class: 2
 random_seed: 4269
 val_size: 0.2
